Fixed horizontal scroll on home page

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -40,6 +40,7 @@ $resumeWidth: 62vmin;
 
 .content {
 	margin-top: $fixh;
+	overflow-x: hidden;
 }
 
 .desc {
